# fiap-hackathon

./: .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-ci.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: codecov.yml
.github/workflows/: pull-request-workflow.yml  push-to-main.yml
app/: main.py
app/application/dtos/: token.py
app/application/services/: jwt_token_service.py
app/application/use_cases/payment/: make_payment.py  update_payment_status.py
app/application/use_cases/record/: create_record.py  create_report.py  get_records.py
app/application/use_cases/user/: authenticate_user.py
app/domain/record/: enums.py  record.py  record_errors.py  record_logic.py  record_repository_abstract.py  record_type.py
app/domain/record/services/: worked_time_calculator.py
app/domain/records/: record.py  record_logic.py
app/domain/shared/: custom_error.py  custom_exceptions.py  event_loop.py  message_code.py  notification_provider_abstract.py  optional_enum.py
app/domain/user/: user.py  user_errors.py  user_logic.py  user_repository_abstract.py
app/infrastructure/: container.py  settings.py
app/infrastructure/persistence/: create_database.py  database.py  mapping_configuration.py
app/infrastructure/persistence/alembic/: env.py
app/infrastructure/persistence/mappers/: __init__.py  record_mapper.py  user_mapper.py
app/infrastructure/persistence/migrations/: 20240320220643_create_users_table.py  20240322002643_create_records_table.py  20240323132557_create_initial_tables.py  20240323154113_add_enrollment_and_password_to_user_.py
app/infrastructure/persistence/repositories/: record_postgres_repository.py  user_postgres_repository.py
app/infrastructure/services/: notification_provider.py
app/presentation/: startup.py
app/presentation/dependencies/: authentication_dependencies.py
app/presentation/helpers/: authentication_helper.py  custom_router.py
app/presentation/routers/: authentication_router.py  health_router.py  record_router.py
app/shared/: password_hash_utils.py
app/shared/dtos/: token.py
app/shared/services/: jwt_token_service.py
manifests/: deployment.yml  namespace.yml  service.yml
pipeline/: docker_entrypoint.sh  generate_migrations.sh  install_dependencies.sh  lint_local.sh  migrate.sh  rollback_last_migration.sh  test.sh
tests/: assert_exception_body.py  conftest.py
tests/factories/: domain_factories.py
tests/helpers/: auth_token_helper.py
tests/integration/presentation/: test_authentication_router.py  test_record_router.py
tests/unit/application/: test_jwt_token_service.py
tests/unit/presentation/: test_authentication_dependencies.py
tests/unit/shared/: test_jwt_token_service.py  test_password_hash_utils.py
(+12 files in other folders)
